--- a/public/css/dots.css
+++ b/public/css/dots.css
@@ -5,6 +5,8 @@ DOTS
 */
 
 .dots{
+    background-image: linear-gradient(rgba(0,212,255, 0.2) 50%, rgba(128,128,128,0.2) 100%);
+    
     position: fixed;
     z-index: -1;
     overflow: hidden;
