--- a/public/css/nightmode.css
+++ b/public/css/nightmode.css
@@ -3,8 +3,15 @@
     background-color: rgb(21, 26, 58)!important;
 }
 .nightmode .display-left,.nightmode .display-right{
-    transition: background-color 0.5s;
-    background-color: rgb(1, 6, 38)!important;
+    transition: background-color 0.5s, transform 0.7s, opacity 0.7s;
+    /*background-color: rgba(1, 6, 38, 0.5)!important;
+    -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.05);
+    -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.05);
+    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.05);
+    */
+}
+.nightmode .display-img{
+    transition: transform 0.5s, opacity 0.5s;
 }
 .nightmode .nav-li{
     background-image:none;   
